--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <title>Coding For Web</title>
 </head>
 <body>
-<p>A1 Assignment:</p>
-    <p>A2 Assignment:</p>
-    <p>A3 Assignment:</p>
+<p>Exercise 1:</p>
+    
 </body>
 </html>
