--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Coding For Web</title>
 </head>
 <body>
-<p>Exercise 1: <a href="Nature.html">Centre Image with background color</a>Nature</p>
+<p>Exercise 1: <a href="Nature.html">Centre Image with background color</a></p>
     
 </body>
 </html>
