--- a/Nature.html
+++ b/Nature.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="Nature.css">
 </head>
 <body>
-    <div><img src="Nature.jpg" alt="image"></div>
+    <div><img src="Nature.jpg" alt="nature"></div>
     
 </body>
 </html>
