--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     </title></head>
     <body>
         <h1>Contents of Assignment:</h1>
-    <p>Exersice 1: <a href=Nature.html>Image at the centre of the page</a> </p>
+    <p>Exersice 1: <a href="Nature.html">Image at the centre of the page</a> </p>
     </body>
 </html>
