--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <body>
         <h1>Contents of Assignment:</h1>
     <p>Exersice 1: <a href="Nature.html">Image at the centre of the page</a> </p>
+        <p>Exersice 2: <a href="Exersice2.html"> CSS Edit </a></p>
     </body>
 </html>
