--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <h1>Contents of Assignment:</h1>
     <p>Exersice 1: <a href="Nature.html">Image at the centre of the page</a> </p>
         <p>Exersice 2: <a href="Exersice2.html"> CSS Edit </a></p>
+        <p>Exersice 3: <a href="Exersice3.html">Color Changing Box</a></p>
     </body>
 </html>
