--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>Exersice 1: <a href="Nature.html">Image at the centre of the page</a> </p>
         <p>Exersice 2: <a href="Exersice2.html"> CSS Edit </a></p>
         <p>Exersice 3: <a href="Exersice3.html">Color Changing Box</a></p>
+        <p>Exersice 4: <a href="Exersice4.html">Types of selectors</a></p>
     </body>
 </html>
