--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         <p>Exersice 2: <a href="Exersice2.html"> CSS Edit </a></p>
         <p>Exersice 3: <a href="Exersice3.html">Color Changing Box</a></p>
         <p>Exersice 4: <a href="Exersice4.html">Types of selectors</a></p>
+        <p>A1 Assignment: <a href="A1.html">A1 Assignment</a></p>
     </body>
 </html>
