--- a/A1.html
+++ b/A1.html
@@ -50,7 +50,7 @@
     <select id="imageSelector">
         <option value="default.png">None</option>
       <option value="sunrise.jpeg">Sunrise</option>
-      <option value="flowers.jpeg">Flowers</option>
+      <option value="D-mart BLR opp.jpeg">Flowers</option>
       <option value="still-life.jpeg">Still Life</option>
     </select>
   </div>
