--- a/A1.html
+++ b/A1.html
@@ -19,9 +19,9 @@
     <meta property="og:type" content="website"/>
 
     <!-- Links to boilerplate CSS and JS files -- DO NOT CHANGE or EDIT THESE!!! -->
-    <link href="style.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="script.js" defer></script> 
-    <script type="text/javascript" src="html2canvas.js defer></script> 
+    <link href="./template-files/style.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="./template-files/script.js" defer></script> 
+    <script type="text/javascript" src="./template-files/html2canvas.js" defer></script> 
 
 
 
@@ -132,4 +132,3 @@
     </div>
 
 </body>    
-</html>
