--- a/A1.html
+++ b/A1.html
@@ -21,7 +21,7 @@
     <!-- Links to boilerplate CSS and JS files -- DO NOT CHANGE or EDIT THESE!!! -->
     <link href="./template-files/style.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="./template-files/script.js" defer></script> 
-    <script type="text/javascript" src="./template-files/html2canvas.js" defer></script> 
+    <script type="text/javascript" src="html2canvas.js" defer></script> 
 
 
 
