--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         <p>Exersice 3: <a href="Exersice3.html">Color Changing Box</a></p>
         <p>Exersice 4: <a href="Exersice4.html">Types of selectors</a></p>
         <p>A1 Assignment: <a href="A1.html">A1 Assignment</a></p>
-        <p>A1 Assignment: <a href="A1.html">A1 Assignment</a></p>
+        <p>Exersice 5: <a href="Exersice 5.html">Exersice 5</a></p>
     </body>
 </html>
