--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <p>Exersice 4: <a href="Exersice4.html">Types of selectors</a></p>
         <p>A1 Assignment: <a href="A1.html">A1 Assignment</a></p>
         <p>Exersice 5: <a href="Exersice 5.html">Display Element</a></p>
+        <p>Exersice 5: <a href="Exersice6.html">CSS Responsive Layout</a></p>
     </body>
 </html>
