--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
         <p>A1 Assignment: <a href="A1.html">A1 Assignment</a></p>
         <p>Exersice 5: <a href="Exersice 5.html">Display Element</a></p>
         <p>Exersice 6: <a href="Exersice6.html">CSS Responsive Layout</a></p>
+        <p>Exersice 7:<a href="Exersice 7.html">Annotation of online journal</a></p>
     </body>
 </html>
