--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
         <p>Exersice 5: <a href="Exersice 5.html">Display Element</a></p>
         <p>Exersice 6: <a href="Exersice6.html">CSS Responsive Layout</a></p>
         <p>Exersice 7:<a href="Exersice 7.html">Annotation of online journal</a></p>
-        <p>A2 Assignment:</p><a href="a2.html">A2 Assignment</a>
+        <p>A2 Assignment:<a href="a2.html">A2 Assignment</a></p>
     </body>
 </html>
