--- a/a2.index.html
+++ b/a2.index.html
@@ -14,7 +14,7 @@
     <body>
         
         <h1>Contents of A2 Assignment</h1>
-        <p>Scan Of The Poster:<a href="">Temples Of India</a></p>
+        <p>Scan Of The Poster:<a href="TEMPLES OF INDIA POSTER.jpg">Temples Of India</a></p>
         <p>A2 Assignment:<a href="">Webpage</a></p>
         <p>DOM Of Webpage:<a href="">DOM</a></p>
         
