--- a/a2.index.html
+++ b/a2.index.html
@@ -14,6 +14,7 @@
     <body>
         
         <h1>Contents of A2 Assignment</h1>
+                <p>This is a group activity by Sharanya Chandrashekar and Ananya Chandorkar</p>
         <p>Scan Of The Poster:<a href="TEMPLES OF INDIA POSTER.jpg">Temples Of India</a></p>
         <p>A2 Assignment:<a href="a2.html">Webpage</a></p>
         <p>DOM Of Webpage:<a href="a2_dom.pdf">DOM</a></p>
