--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
         <p>Exersice 6: <a href="Exersice6.html">CSS Responsive Layout</a></p>
         <p>Exersice 7:<a href="Exersice 7.html">Annotation of online journal</a></p>
         <p>A2 Assignment:<a href="a2.index.html">A2 Assignment</a></p>
-                <p>Exersice 8:<a href="">Javascript for buttons</a></p>
+                <p>Exersice 8:<a href="Exersice 8.html">Javascript for buttons</a></p>
     </body>
 </html>
