--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         <p>Exersice 7:<a href="Exersice 7.html">Annotation of online journal</a></p>
         <p>A2 Assignment:<a href="a2.index.html">A2 Assignment</a></p>
                 <p>Exersice 8:<a href="Exersice 8.html">Javascript for buttons</a></p>
-        <p>A2.2 Assignment:<a href="">A2.2 Assignment</a></p>
+        <p>A2.2 Assignment:<a href="a2.2.html">A2.2 Assignment</a></p>
     </body>
 </html>
