--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         <p>Exersice 5: <a href="Exersice 5.html">Display Element</a></p>
         <p>Exersice 6: <a href="Exersice6.html">CSS Responsive Layout</a></p>
         <p>Exersice 7:<a href="Exersice 7.html">Annotation of online journal</a></p>
-        <p>A2 Assignment:<a href="a2.index.html">A2 Assignment</a></p>
+        <p>A2.1 Assignment:<a href="a2.index.html">A2 Assignment</a></p>
                 <p>Exersice 8:<a href="Exersice 8.html">Javascript for buttons</a></p>
         <p>A2.2 Assignment:<a href="a2.2.html">A2.2 Assignment</a></p>
+        <p>Exersice 9:<a href="Exersice9.html">Using JSON to import data</a></p>
     </body>
 </html>
