--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
                 <p>Exersice 8:<a href="Exersice 8.html">Javascript for buttons</a></p>
         <p>A2.2 Assignment:<a href="a2.2.html">A2.2 Assignment</a></p>
         <p>Exersice 9:<a href="Exersice9.html">Using JSON to import data</a></p>
+        <p>Exersice 10:<a href="https://github.com/SharanyaCS13/Exercise10">PHP Code</a></p>
     </body>
 </html>
