--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
         <p>Exersice 9:<a href="Exersice9.html">Using JSON to import data</a></p>
         <p>Exersice 10:<a href="https://github.com/SharanyaCS13/Exercise10">PHP Code</a></p>
         <p>Exersice 11:<a href="Exercise 11.html">Javascript Library: Twine</a></p>
-        <p>A3 Assignment<a href="A3.html">A3 Assignment</a></p>
+        <p>A3 Assignment<a href="A3.html">A3 Assignment</a></p><p href=""A3_DOM.pdf>DOM</p>
     </body>
 </html>
